@@ -103,6 +103,7 @@ Additions:
     * Edje:
      - Add edje_object_part_text_input_panel_layout_variation_set/get API
      - Add EDJE_INPUT_PANEL_LAYOUT_DATETIME layout
+     - support edc proxy.source_visible
     * Evil:
      - Add mkdtemp.
     * ecore_x:
